fix: allow ship placement instruction text to stretch to full width

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -250,7 +250,7 @@ h2 {
   background-color: rgba(255, 255, 255, 0.3);
   padding: 0.4rem;
   border-radius: 0.2rem;
-  width: 23rem;
+  min-width: 23rem;
   height: 4.5rem;
 }
 .game-start-instructions.error {
